# svapna

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  feature_list.json  pyproject.toml
.ai/: NEW_PROJECT_GUIDE.md  agent-system.md  models.yml  todo.md
config/: identity.yml  pipeline.yml  training.yml
docs/: architecture-decisions.md  evaluation.md  findings-2026-04-24.md  hermes-honcho-research.md  personality-finetuning-research.md  training-data-design.md
embodiment/: CURRENT_STATE.md  HANDOFF.md  ROADMAP.md
prompts/: memory_consolidate.md  memory_executor.md  memory_judge.md
scripts/: analyze_training_data.py  apply_audit_2026_04_24.py  audition_voices.py  autonomous_build.sh  build_atlas.py  build_sandhi.py  build_training_set.py  dry_run_tests.py  embodiment_control.py  embodiment_voice_demo.py  eval_summoning.py  gen_test_atlas.py  gen_test_sandhi.py  gen_test_sprites.py  generate_rejecteds.py  gpu_stress_test.py  ha_register_narada.py  ha_setup_pipeline.py  ha_swap_tts_to_kokoro.py  heartbeat.bat.example  install_narada_supervisor_task.ps1  listen.py  live_preview.py  migrate_sqlite_to_cycles.py  push_weather.py  render_preview.py  run_evals.py  set_alien.py  set_bhumi.py  set_stt.py  sprite_test_control.py  test_base_models.py  test_build_executor.py  test_conviction.py  test_conviction_extended.py  test_play_media.py  train-ceremony.bat  train_ceremony.py  voice_experiment.py  voice_pipeline.py
tests/: test_cli.py  test_config.py  test_dream_generate.py  test_dream_journal.py  test_dream_score.py  test_dream_templates.py  test_drift.py  (+10 more)
(+169 files in other folders)
